<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/contact_favorite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:padding="10dp"
            android:src="@mipmap/favorite_false" />

        <ImageView
            android:id="@+id/contact_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:padding="20dp"
            android:src="@mipmap/user_large" />

        <TextView
            android:id="@+id/contact_name"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="name" />

        <TextView
            android:id="@+id/contact_company"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="company" />

        <!--
                home number layout -->
        <LinearLayout
            android:id="@+id/phone_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/fragment_phone_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/phone_home_number"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    tools:text="123" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/fragment_home_text" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardview_dark_background" />

        </LinearLayout>

        <!--
               mobile number layout-->
        <LinearLayout
            android:id="@+id/phone_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/fragment_phone_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/phone_mobile_number"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    tools:text="123" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/fragment_mobile_text" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardview_dark_background" />

        </LinearLayout>

        <!--
                work number layout
        -->
        <LinearLayout
            android:id="@+id/phone_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/fragment_phone_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/phone_work_number"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    tools:text="123" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/fragment_work_text" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardview_dark_background" />

        </LinearLayout>
        <!--
                address layout
        -->
        <LinearLayout
            android:id="@+id/contact_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/fragment_address_title" />

            <TextView
                android:id="@+id/address"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="10dp"
                tools:text="123" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardview_dark_background" />

        </LinearLayout>

        <!--
                birthday
        -->
        <LinearLayout
            android:id="@+id/contact_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/fragment_birthday_title" />

            <TextView
                android:id="@+id/birthday"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="10dp"
                tools:text="123" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardview_dark_background" />

        </LinearLayout>

        <!--
                email
        -->
        <LinearLayout
            android:id="@+id/contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/fragment_email_title" />

            <TextView
                android:id="@+id/email"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="10dp"
                tools:text="123" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardview_dark_background" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>